--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://suryatejat.github.io/carpool",
+  "homepage": "https://suryatejat.github.io/carpool/",
   "name": "carpool",
   "version": "0.1.0",
   "private": true,
